feat: Seperate navbar

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -17,6 +17,9 @@
 
   -->
 
+  <nav>
+    <application name="@TachMonShop-navbar"></application>
+  </nav>
   <main>
     <route default>
       <application name="@single-spa/welcome"></application>
