--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -16,10 +16,9 @@
   </route>
 
   -->
-
-  <nav>
+  <header>
     <application name="@TachMonShop-navbar"></application>
-  </nav>
+  </header>
   <main>
     <route default>
       <application name="@single-spa/welcome"></application>
