--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -24,4 +24,7 @@
       <application name="@single-spa/welcome"></application>
     </route>
   </main>
+  <footer>
+    <application name="@TachMonShop-footer"></application>
+  </footer>
 </single-spa-router>
