--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -19,9 +19,9 @@
   <header>
     <application name="@TachMonShop-navbar"></application>
   </header>
-  <main>
+  <main class="m-auto max-w-5xl">
     <route default>
-      <application name="@single-spa/welcome"></application>
+      <application name="@TachMonShop-home"></application>
     </route>
   </main>
   <footer>
