fix: Try to make stateful shared UI

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -17,14 +17,14 @@
 
   -->
   <header>
-    <application name="@TachMonShop-navbar"></application>
+    <application name="@TachMonShop/navbar"></application>
   </header>
   <main class="m-auto max-w-5xl">
     <route default>
-      <application name="@TachMonShop-home"></application>
+      <application name="@TachMonShop/home"></application>
     </route>
   </main>
   <footer>
-    <application name="@TachMonShop-footer"></application>
+    <application name="@TachMonShop/footer"></application>
   </footer>
 </single-spa-router>
