--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -19,7 +19,7 @@
   <header>
     <application name="@TachMonShop/navbar"></application>
   </header>
-  <main class="m-auto max-w-5xl">
+  <main class="m-auto" style="max-width: 1180px;">
     <route default>
       <application name="@TachMonShop/home"></application>
     </route>
