feat: Add login to route and change styleguide

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -23,6 +23,9 @@
     <route default>
       <application name="@TachMonShop/home"></application>
     </route>
+    <route path="login">
+      <application name="@TachMonShop/login"></application>
+    </route>
   </main>
   <footer>
     <application name="@TachMonShop/footer"></application>
