feat: Connect cart to main page

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -29,6 +29,9 @@
     <route path="signup">
       <application name="@TachMonShop/login"></application>
     </route>
+    <route path="cart">
+      <application name="@TachMonShop/cart"></application>
+    </route>
     <route path=":shoperId/:productId">
       <application name="@TachMonShop/product"></application>
     </route>
