fix: Recreate theme in login

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -35,7 +35,9 @@
     <route path=":shoperId/:productId">
       <application name="@TachMonShop/product"></application>
     </route>
-
+    <route path="wishlist">
+      <application name="@TachMonShop/wishlist"></application>
+    </route>
     <route default>
       <application name="@TachMonShop/404"></application>
     </route>
