--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -41,6 +41,9 @@
     <route path="wishlist">
       <application name="@TachMonShop/wishlist"></application>
     </route>
+    <route path="orderlist">
+      <application name="@TachMonShop/orderlist"></application>
+    </route>
     <route default>
       <application name="@TachMonShop/404"></application>
     </route>
