--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -44,6 +44,9 @@
     <route path="orderlist">
       <application name="@TachMonShop/orderlist"></application>
     </route>
+    <route path="statistics">
+      <application name="@TachMonShop/statistics"></application>
+    </route>
     <route default>
       <application name="@TachMonShop/404"></application>
     </route>
