feat: Merge API to product

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -47,6 +47,12 @@
     <route default>
       <application name="@TachMonShop/404"></application>
     </route>
+    <route path="about">
+      <application name="@TachMonShop/about"></application>
+    </route>
+    <route path="contacts">
+      <application name="@TachMonShop/contact"></application>
+    </route>
   </main>
   <footer>
     <application name="@TachMonShop/footer"></application>
