--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -47,6 +47,9 @@
     <route path="statistics">
       <application name="@TachMonShop/statistics"></application>
     </route>
+    <route path="manage-products">
+      <application name="@TachMonShop/manage-products"></application>
+    </route>
     <route default>
       <application name="@TachMonShop/404"></application>
     </route>
