feat: Search & fix API bug

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -29,8 +29,14 @@
     <route path="signup">
       <application name="@TachMonShop/login"></application>
     </route>
+    <route path="otp">
+      <application name="@TachMonShop/login"></application>
+    </route>
     <route path="cart" exact>
       <application name="@TachMonShop/cart"></application>
+    </route>
+    <route path="search" exact>
+      <application name="@TachMonShop/search"></application>
     </route>
     <route path="cart/billing" exact>
       <application name="@TachMonShop/billing"></application>
