--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -1,4 +1,5 @@
 <single-spa-router>
+  <application name="@TachMonShop/notification"></application>
   <!--
 
     This is the single-spa Layout Definition for your microfrontends.
