--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -54,6 +54,9 @@
     <route path="statistics">
       <application name="@TachMonShop/statistics"></application>
     </route>
+    <route path="voucher">
+      <application name="@TachMonShop/voucher"></application>
+    </route>
     <route path="manage-products">
       <application name="@TachMonShop/manage-products"></application>
     </route>
