--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -69,6 +69,9 @@
     <route path="contacts">
       <application name="@TachMonShop/contact"></application>
     </route>
+    <route path="account">
+      <application name="@TachMonShop/account"></application>
+    </route>
   </main>
   <footer>
     <application name="@TachMonShop/footer"></application>
