fix: UI Voucher

--- a/client/root-config/src/microfrontend-layout.html
+++ b/client/root-config/src/microfrontend-layout.html
@@ -51,9 +51,6 @@
     <route path="statistics">
       <application name="@TachMonShop/statistics"></application>
     </route>
-    <route path="voucher">
-      <application name="@TachMonShop/voucher"></application>
-    </route>
     <route path="manage-products">
       <application name="@TachMonShop/manage-products"></application>
     </route>
@@ -71,6 +68,9 @@
     </route>
     <route path="account/order">
       <application name="@TachMonShop/orderlist"></application>
+    </route>
+    <route path="account/voucher">
+      <application name="@TachMonShop/voucher"></application>
     </route>
   </main>
   <footer>
